--- a/Foresome/Foresome/AfterLogin/NewsFeed/Cell/NewsFeedTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Cell/NewsFeedTableCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,18 +18,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="468" id="KGk-i7-Jjw" customClass="NewsFeedTableCell" customModule="Foresome" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="340" height="468"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="446" id="KGk-i7-Jjw" customClass="NewsFeedTableCell" customModule="Foresome" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="389" height="446"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="340" height="468"/>
+                <rect key="frame" x="0.0" y="0.0" width="389" height="446"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vss-Dr-Uw8">
-                        <rect key="frame" x="24" y="0.0" width="292" height="468"/>
+                        <rect key="frame" x="24" y="16" width="341" height="430"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="MUD-db-Nya">
-                                <rect key="frame" x="16" y="16" width="148" height="40"/>
+                                <rect key="frame" x="16" y="8" width="148" height="40"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="VAA-97-CMz">
                                         <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -41,7 +40,7 @@
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="16"/>
+                                                <real key="value" value="20"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
@@ -65,15 +64,15 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sAJ-qP-ws7">
-                                <rect key="frame" x="252" y="15.333333333333336" width="24" height="24"/>
+                                <rect key="frame" x="301" y="7.3333333333333321" width="24" height="24"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="ic_more"/>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="1sz-Os-gIb">
-                                <rect key="frame" x="16" y="72" width="260" height="332.66666666666669"/>
+                                <rect key="frame" x="16" y="64" width="309" height="313"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pex" translatesAutoresizingMaskIntoConstraints="NO" id="AZA-Ua-oLZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="260" height="184"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="309" height="184"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="184" id="wee-wy-E9U"/>
                                         </constraints>
@@ -85,23 +84,23 @@
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thanks to everyone at the first ever Foresome Golf Tournament!! Congrats to the winners Adam Goraieb an…Read More" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAQ-RH-KcM">
-                                        <rect key="frame" x="0.0" y="199" width="260" height="78.666666666666686"/>
+                                        <rect key="frame" x="0.0" y="199" width="309" height="59"/>
                                         <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                         <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K5r-OC-T1L">
-                                        <rect key="frame" x="0.0" y="292.66666666666669" width="260" height="1"/>
+                                        <rect key="frame" x="0.0" y="273" width="309" height="1"/>
                                         <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="bhN-Ky-HNx"/>
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="RLN-pQ-kPE">
-                                        <rect key="frame" x="0.0" y="308.66666666666669" width="260" height="24"/>
+                                        <rect key="frame" x="0.0" y="289" width="309" height="24"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J7t-MT-upl">
-                                                <rect key="frame" x="0.0" y="0.0" width="76" height="24"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="92.333333333333329" height="24"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="24" id="s2V-Bk-aAt"/>
                                                 </constraints>
@@ -112,7 +111,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J7H-1t-4Fv">
-                                                <rect key="frame" x="92" y="0.0" width="76" height="24"/>
+                                                <rect key="frame" x="108.33333333333334" y="0.0" width="92.333333333333343" height="24"/>
                                                 <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="14"/>
                                                 <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -121,7 +120,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tlm-Fr-QJL">
-                                                <rect key="frame" x="184" y="0.0" width="76" height="24"/>
+                                                <rect key="frame" x="216.66666666666671" y="0.0" width="92.333333333333343" height="24"/>
                                                 <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="14"/>
                                                 <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -138,13 +137,13 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" name="Blue_main"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="MUD-db-Nya" firstAttribute="leading" secondItem="vss-Dr-Uw8" secondAttribute="leading" constant="16" id="4nN-M6-53m"/>
                             <constraint firstItem="1sz-Os-gIb" firstAttribute="top" secondItem="MUD-db-Nya" secondAttribute="bottom" constant="16" id="GoJ-5H-86G"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="1sz-Os-gIb" secondAttribute="bottom" constant="20" id="K83-qi-ofc"/>
                             <constraint firstAttribute="trailing" secondItem="sAJ-qP-ws7" secondAttribute="trailing" constant="16" id="M3j-QD-BVl"/>
-                            <constraint firstItem="MUD-db-Nya" firstAttribute="top" secondItem="vss-Dr-Uw8" secondAttribute="top" constant="16" id="VCO-To-srO"/>
+                            <constraint firstItem="MUD-db-Nya" firstAttribute="top" secondItem="vss-Dr-Uw8" secondAttribute="top" constant="8" id="VCO-To-srO"/>
                             <constraint firstItem="1sz-Os-gIb" firstAttribute="trailing" secondItem="sAJ-qP-ws7" secondAttribute="trailing" id="aZ5-8F-giK"/>
                             <constraint firstItem="1sz-Os-gIb" firstAttribute="leading" secondItem="MUD-db-Nya" secondAttribute="leading" id="sui-go-b82"/>
                             <constraint firstItem="sAJ-qP-ws7" firstAttribute="centerY" secondItem="igW-7w-fnr" secondAttribute="centerY" id="unA-7S-oPJ"/>
@@ -157,10 +156,11 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
+                <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="vss-Dr-Uw8" secondAttribute="bottom" id="2dB-hh-cWu"/>
                     <constraint firstAttribute="trailing" secondItem="vss-Dr-Uw8" secondAttribute="trailing" constant="24" id="ISU-3t-gIM"/>
-                    <constraint firstItem="vss-Dr-Uw8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="O4q-yK-cC8"/>
+                    <constraint firstItem="vss-Dr-Uw8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="O4q-yK-cC8"/>
                     <constraint firstItem="vss-Dr-Uw8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="w1l-Cp-urO"/>
                 </constraints>
             </tableViewCellContentView>
@@ -175,7 +175,7 @@
                 <outlet property="shareBtn" destination="Tlm-Fr-QJL" id="6La-ZU-b6c"/>
                 <outlet property="userNameLbl" destination="igW-7w-fnr" id="ifm-kc-Ch1"/>
             </connections>
-            <point key="canvasLocation" x="654.96183206106866" y="9.8591549295774659"/>
+            <point key="canvasLocation" x="796.18320610687022" y="-9.1549295774647899"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -185,8 +185,5 @@
         <image name="ic_more" width="24" height="24"/>
         <image name="ic_share" width="24" height="24"/>
         <image name="pex" width="4128" height="3096"/>
-        <namedColor name="Blue_main">
-            <color red="0.18823529411764706" green="0.47450980392156861" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
