--- a/Foresome/Foresome/AfterLogin/NewsFeed/Cell/TalkAboutTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Cell/TalkAboutTableCell.xib
@@ -19,15 +19,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="215" id="KGk-i7-Jjw" customClass="TalkAboutTableCell" customModule="Foresome" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="404" height="215"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="171" id="KGk-i7-Jjw" customClass="TalkAboutTableCell" customModule="Foresome" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="460" height="171"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="404" height="215"/>
+                <rect key="frame" x="0.0" y="0.0" width="460" height="171"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lvG-Ye-oX8">
-                        <rect key="frame" x="0.0" y="0.0" width="404" height="215"/>
+                        <rect key="frame" x="0.0" y="0.0" width="460" height="112"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minimalism" translatesAutoresizingMaskIntoConstraints="NO" id="fO1-0b-ohN">
                                 <rect key="frame" x="24" y="16" width="40" height="40"/>
@@ -38,12 +38,12 @@
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="16"/>
+                                        <real key="value" value="20"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="What do you want to talk about?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zqf-rS-QSp">
-                                <rect key="frame" x="80" y="27" width="300" height="18"/>
+                                <rect key="frame" x="80" y="25.333333333333336" width="356" height="21.333333333333336"/>
                                 <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <userDefinedRuntimeAttributes>
@@ -53,17 +53,17 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ty1-w3-FnA">
-                                <rect key="frame" x="0.0" y="71" width="404" height="1"/>
+                                <rect key="frame" x="0.0" y="71" width="460" height="1"/>
                                 <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="H5A-Do-epw"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="geL-Om-g6a">
-                                <rect key="frame" x="24" y="88" width="373.33333333333331" height="24"/>
+                                <rect key="frame" x="24" y="88" width="406" height="24"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yj8-v0-hi5">
-                                        <rect key="frame" x="0.0" y="0.0" width="113" height="24"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="124" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="24" id="fJP-Go-dtc"/>
                                         </constraints>
@@ -74,14 +74,14 @@
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IJd-kX-c9u">
-                                        <rect key="frame" x="121" y="0.0" width="1" height="24"/>
+                                        <rect key="frame" x="132" y="0.0" width="1" height="24"/>
                                         <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="2iQ-MF-1up"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eYv-jU-UJf">
-                                        <rect key="frame" x="130" y="0.0" width="113.33333333333331" height="24"/>
+                                        <rect key="frame" x="141" y="0.0" width="124" height="24"/>
                                         <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="14"/>
                                         <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -90,14 +90,14 @@
                                         </state>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="78u-ZJ-J8P">
-                                        <rect key="frame" x="251.33333333333331" y="0.0" width="1" height="24"/>
+                                        <rect key="frame" x="273" y="0.0" width="1" height="24"/>
                                         <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="lCg-Q1-uWa"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Elp-Uu-hXe">
-                                        <rect key="frame" x="260.33333333333331" y="0.0" width="113" height="24"/>
+                                        <rect key="frame" x="282" y="0.0" width="124" height="24"/>
                                         <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="14"/>
                                         <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -118,11 +118,11 @@
                             <constraint firstAttribute="trailing" secondItem="ty1-w3-FnA" secondAttribute="trailing" id="HQu-A0-nZk"/>
                             <constraint firstItem="zqf-rS-QSp" firstAttribute="centerY" secondItem="fO1-0b-ohN" secondAttribute="centerY" id="Kj8-G2-z1D"/>
                             <constraint firstItem="geL-Om-g6a" firstAttribute="leading" secondItem="lvG-Ye-oX8" secondAttribute="leading" constant="24" id="Liz-fi-PTQ"/>
-                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="geL-Om-g6a" secondAttribute="bottom" constant="16" id="NCL-C0-1te"/>
+                            <constraint firstAttribute="bottom" secondItem="geL-Om-g6a" secondAttribute="bottom" id="NCL-C0-1te"/>
                             <constraint firstItem="ty1-w3-FnA" firstAttribute="top" secondItem="fO1-0b-ohN" secondAttribute="bottom" constant="15" id="Qvf-bI-tnb"/>
                             <constraint firstItem="ty1-w3-FnA" firstAttribute="leading" secondItem="lvG-Ye-oX8" secondAttribute="leading" id="WHT-7d-G5U"/>
                             <constraint firstAttribute="trailing" secondItem="zqf-rS-QSp" secondAttribute="trailing" constant="24" id="XEb-Sy-nS1"/>
-                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="geL-Om-g6a" secondAttribute="trailing" constant="30" id="kT4-Cx-JTa"/>
+                            <constraint firstAttribute="trailing" secondItem="geL-Om-g6a" secondAttribute="trailing" constant="30" id="kT4-Cx-JTa"/>
                             <constraint firstItem="geL-Om-g6a" firstAttribute="top" secondItem="ty1-w3-FnA" secondAttribute="bottom" constant="16" id="kWR-BM-nur"/>
                             <constraint firstItem="fO1-0b-ohN" firstAttribute="top" secondItem="lvG-Ye-oX8" secondAttribute="top" constant="16" id="szb-lF-f2O"/>
                             <constraint firstItem="zqf-rS-QSp" firstAttribute="leading" secondItem="fO1-0b-ohN" secondAttribute="trailing" constant="16" id="tTd-wC-oYc"/>
@@ -133,8 +133,7 @@
                     <constraint firstAttribute="trailing" secondItem="lvG-Ye-oX8" secondAttribute="trailing" id="DVQ-PV-Wd0"/>
                     <constraint firstItem="lvG-Ye-oX8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="GEU-nz-Zop"/>
                     <constraint firstItem="lvG-Ye-oX8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Tsj-6i-pxa"/>
-                    <constraint firstAttribute="bottom" secondItem="lvG-Ye-oX8" secondAttribute="bottom" id="Wn5-bw-Uco"/>
-                    <constraint firstItem="yj8-v0-hi5" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="1:1.9" id="cKE-2c-cII"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lvG-Ye-oX8" secondAttribute="bottom" constant="8" id="VRP-uZ-OgD"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -145,7 +144,7 @@
                 <outlet property="profileImage" destination="fO1-0b-ohN" id="CPO-p0-fvE"/>
                 <outlet property="talkAboutField" destination="zqf-rS-QSp" id="CzV-3K-f62"/>
             </connections>
-            <point key="canvasLocation" x="296.18320610687022" y="95.422535211267615"/>
+            <point key="canvasLocation" x="337.40458015267177" y="77.112676056338032"/>
         </tableViewCell>
     </objects>
     <resources>
