--- a/Foresome/Foresome/AfterLogin/NewsFeed/Header/NewsHeader.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Header/NewsHeader.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,15 +18,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="640" height="322"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="NewsHeader" customModule="Foresome" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="640" height="531"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uJE-Y5-QVl">
-                    <rect key="frame" x="0.0" y="0.0" width="640" height="322"/>
+                <view clipsSubviews="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="uJE-Y5-QVl">
+                    <rect key="frame" x="0.0" y="0.0" width="640" height="531"/>
                     <subviews>
                         <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="irina-iriser-1379640-2" translatesAutoresizingMaskIntoConstraints="NO" id="1ZE-Md-s1t">
-                            <rect key="frame" x="0.0" y="0.0" width="640" height="306"/>
+                            <rect key="frame" x="0.0" y="0.0" width="640" height="531"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
                                     <size key="value" width="0.0" height="0.0"/>
@@ -60,19 +59,21 @@
                             <state key="normal" image="ic_notification_active"/>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="8Mw-L0-VWq">
-                            <rect key="frame" x="24" y="263" width="592" height="43"/>
+                            <rect key="frame" x="24" y="476" width="592" height="55"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="Itb-Nq-qFk">
-                                    <rect key="frame" x="0.0" y="0.0" width="292" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="292" height="55"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Members" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEP-mj-uYt">
-                                            <rect key="frame" x="110" y="0.0" width="72.333333333333314" height="21"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kum-CE-q3i">
+                                            <rect key="frame" x="109.66666666666666" y="0.0" width="73" height="33"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
-                                            <color key="textColor" red="0.25098039215686274" green="0.80392156862745101" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" title="Members">
+                                                <color key="titleColor" red="0.25098039215686274" green="0.80392156862745101" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            </state>
+                                        </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TIB-z4-EN1">
-                                            <rect key="frame" x="0.0" y="40" width="292" height="3"/>
+                                            <rect key="frame" x="0.0" y="52" width="292" height="3"/>
                                             <color key="backgroundColor" red="0.25098039215686274" green="0.80392156862745101" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="3" id="KE0-jU-kRZ"/>
@@ -85,16 +86,18 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="cfl-3P-jrX">
-                                    <rect key="frame" x="300" y="0.0" width="292" height="43"/>
+                                    <rect key="frame" x="300" y="0.0" width="292" height="55"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U2z-IQ-tnz">
-                                            <rect key="frame" x="119" y="0.0" width="54" height="21"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Msi-vS-03M">
+                                            <rect key="frame" x="119" y="0.0" width="54" height="33"/>
                                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" title="Friends">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                        </button>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ono-Lw-201">
-                                            <rect key="frame" x="0.0" y="40" width="292" height="3"/>
+                                            <rect key="frame" x="0.0" y="52" width="292" height="3"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="3" id="2dg-yx-j1M"/>
@@ -109,32 +112,32 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="wjK-rL-wCh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="53U-1l-o55" secondAttribute="trailing" constant="16" id="0ay-LE-7lf"/>
-                        <constraint firstAttribute="bottom" secondItem="1ZE-Md-s1t" secondAttribute="bottom" constant="16" id="0dB-7u-vfz"/>
+                        <constraint firstAttribute="bottom" secondItem="1ZE-Md-s1t" secondAttribute="bottom" id="0dB-7u-vfz"/>
                         <constraint firstItem="1ZE-Md-s1t" firstAttribute="leading" secondItem="uJE-Y5-QVl" secondAttribute="leading" id="2cn-Fb-28D"/>
                         <constraint firstAttribute="trailing" secondItem="wjK-rL-wCh" secondAttribute="trailing" constant="24" id="97V-75-oBk"/>
                         <constraint firstAttribute="trailing" secondItem="8Mw-L0-VWq" secondAttribute="trailing" constant="24" id="AkY-CR-mbf"/>
                         <constraint firstItem="wjK-rL-wCh" firstAttribute="centerY" secondItem="JGH-5W-Ait" secondAttribute="centerY" id="CMr-ME-bNV"/>
-                        <constraint firstItem="8Mw-L0-VWq" firstAttribute="top" secondItem="53U-1l-o55" secondAttribute="bottom" constant="138.66666666666666" id="Q8u-80-kga"/>
                         <constraint firstAttribute="trailing" secondItem="1ZE-Md-s1t" secondAttribute="trailing" id="RzJ-ac-Rq8"/>
                         <constraint firstItem="8Mw-L0-VWq" firstAttribute="leading" secondItem="uJE-Y5-QVl" secondAttribute="leading" constant="24" id="Wrh-aw-hBr"/>
                         <constraint firstItem="53U-1l-o55" firstAttribute="leading" secondItem="uJE-Y5-QVl" secondAttribute="leading" constant="24" id="aM4-OU-oY6"/>
+                        <constraint firstItem="1ZE-Md-s1t" firstAttribute="bottom" secondItem="8Mw-L0-VWq" secondAttribute="bottom" id="sja-ay-eEu"/>
                         <constraint firstItem="1ZE-Md-s1t" firstAttribute="top" secondItem="uJE-Y5-QVl" secondAttribute="top" id="uZ6-XZ-jte"/>
+                        <constraint firstItem="8Mw-L0-VWq" firstAttribute="top" relation="greaterThanOrEqual" secondItem="53U-1l-o55" secondAttribute="bottom" constant="20" id="w4z-aY-8yE"/>
                         <constraint firstItem="53U-1l-o55" firstAttribute="top" secondItem="uJE-Y5-QVl" secondAttribute="top" constant="64" id="zb3-ll-dDc"/>
                     </constraints>
                 </view>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="uJE-Y5-QVl" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="MuQ-Ri-ywA"/>
                 <constraint firstItem="uJE-Y5-QVl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ey5-sq-I8t"/>
+                <constraint firstItem="uJE-Y5-QVl" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="hd3-a4-fVW"/>
                 <constraint firstAttribute="bottom" secondItem="uJE-Y5-QVl" secondAttribute="bottom" id="m7m-Eh-iML"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="396.94656488549617" y="-103.52112676056339"/>
+            <point key="canvasLocation" x="396.94656488549617" y="-65.845070422535215"/>
         </view>
     </objects>
     <resources>
