--- a/Foresome/Foresome/AfterLogin/CreatePoll/View/CreatePollViewController.xib
+++ b/Foresome/Foresome/AfterLogin/CreatePoll/View/CreatePollViewController.xib
@@ -82,10 +82,10 @@
                             <rect key="frame" x="0.0" y="0.0" width="393" height="718"/>
                             <subviews>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ctD-7q-cTg">
-                                    <rect key="frame" x="24" y="24" width="345" height="160"/>
+                                    <rect key="frame" x="24" y="24" width="345" height="30"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J5G-Yf-SLz" customClass="GrowingTextView" customModule="Foresome">
-                                            <rect key="frame" x="16" y="0.0" width="329" height="160"/>
+                                            <rect key="frame" x="16" y="0.0" width="329" height="30"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="textColor" systemColor="labelColor"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -122,13 +122,13 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="pjH-Kf-X1g">
-                                    <rect key="frame" x="24" y="200" width="345" height="176"/>
+                                    <rect key="frame" x="24" y="70" width="345" height="0.0"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KI4-Pl-Ndl">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="80"/>
+                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KI4-Pl-Ndl">
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="32"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FoE-BR-AGK" customClass="GrowingTextView" customModule="Foresome" customModuleProvider="target">
-                                                    <rect key="frame" x="16" y="16" width="313" height="48"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FoE-BR-AGK" customClass="GrowingTextView" customModule="Foresome" customModuleProvider="target">
+                                                    <rect key="frame" x="16" y="16" width="313" height="0.0"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="textColor" systemColor="labelColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -163,11 +163,11 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </view>
-                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R2Z-YJ-dum">
-                                            <rect key="frame" x="0.0" y="96" width="345" height="80"/>
+                                        <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R2Z-YJ-dum">
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="32"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fdY-oC-qAW" customClass="GrowingTextView" customModule="Foresome">
-                                                    <rect key="frame" x="16" y="16" width="313" height="48"/>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fdY-oC-qAW" customClass="GrowingTextView" customModule="Foresome">
+                                                    <rect key="frame" x="16" y="16" width="313" height="0.0"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="textColor" systemColor="labelColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -206,7 +206,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="gTA-K1-YEo">
-                                    <rect key="frame" x="24" y="396" width="345" height="86.666666666666686"/>
+                                    <rect key="frame" x="24" y="90" width="345" height="86.666666666666686"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jY7-wP-uSL">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="34"/>
